src/idlcompiler/DotNetOrb.IdlCompiler/IDLPreprocessorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/GitHub/wuerzi2000/DotNetOrb/src/idlcompiler/IDL.Grammar/IDLPreprocessorParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace DotNetOrb.IdlCompiler {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class IDLPreprocessorParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SHARP=1, CODE=2, IMPORT=3, INCLUDE=4, PRAGMA=5, PREFIX=6, DEFINE=7, DEFINED=8, 
		IF=9, ELIF=10, ELSE=11, UNDEF=12, IFDEF=13, IFNDEF=14, ENDIF=15, TRUE=16, 
		FALSE=17, ERROR=18, BANG=19, LPAREN=20, RPAREN=21, EQUAL=22, NOTEQUAL=23, 
		AND=24, OR=25, LT=26, GT=27, LE=28, GE=29, DIRECTIVE_WHITESPACES=30, DIRECTIVE_STRING=31, 
		CONDITIONAL_SYMBOL=32, DECIMAL_LITERAL=33, FLOAT=34, NEW_LINE=35, DIRECTIVE_COMMENT=36, 
		DIRECTIVE_LINE_COMMENT=37, DIRECITVE_NEW_LINE=38, DIRECTIVE_TEXT_NEW_LINE=39, 
		TEXT=40, SLASH=41, StringEnd=42, SEMICOLON=43;
	public const int
		RULE_idlDocument = 0, RULE_text = 1, RULE_code = 2, RULE_include = 3, 
		RULE_pragma = 4, RULE_directive = 5, RULE_directive_text = 6, RULE_preprocessor_expression = 7;
	public static readonly string[] ruleNames = {
		"idlDocument", "text", "code", "include", "pragma", "directive", "directive_text", 
		"preprocessor_expression"
	};

	private static readonly string[] _LiteralNames = {
		null, "'#'", null, null, null, "'pragma'", "'prefix'", null, "'defined'", 
		"'if'", "'elif'", "'else'", "'undef'", "'ifdef'", "'ifndef'", "'endif'", 
		null, null, "'error'", "'!'", "'('", "')'", "'=='", "'!='", "'&&'", "'||'", 
		"'<'", "'>'", "'<='", "'>='", null, null, null, null, null, null, null, 
		null, null, null, null, null, "'\"'", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SHARP", "CODE", "IMPORT", "INCLUDE", "PRAGMA", "PREFIX", "DEFINE", 
		"DEFINED", "IF", "ELIF", "ELSE", "UNDEF", "IFDEF", "IFNDEF", "ENDIF", 
		"TRUE", "FALSE", "ERROR", "BANG", "LPAREN", "RPAREN", "EQUAL", "NOTEQUAL", 
		"AND", "OR", "LT", "GT", "LE", "GE", "DIRECTIVE_WHITESPACES", "DIRECTIVE_STRING", 
		"CONDITIONAL_SYMBOL", "DECIMAL_LITERAL", "FLOAT", "NEW_LINE", "DIRECTIVE_COMMENT", 
		"DIRECTIVE_LINE_COMMENT", "DIRECITVE_NEW_LINE", "DIRECTIVE_TEXT_NEW_LINE", 
		"TEXT", "SLASH", "StringEnd", "SEMICOLON"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "IDLPreprocessorParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static IDLPreprocessorParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public IDLPreprocessorParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public IDLPreprocessorParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class IdlDocumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(IDLPreprocessorParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public IdlDocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_idlDocument; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.EnterIdlDocument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.ExitIdlDocument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIDLPreprocessorParserVisitor<TResult> typedVisitor = visitor as IIDLPreprocessorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdlDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdlDocumentContext idlDocument() {
		IdlDocumentContext _localctx = new IdlDocumentContext(Context, State);
		EnterRule(_localctx, 0, RULE_idlDocument);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 19;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SHARP || _la==CODE) {
				{
				{
				State = 16;
				text();
				}
				}
				State = 21;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 22;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHARP() { return GetToken(IDLPreprocessorParser.SHARP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IncludeContext include() {
			return GetRuleContext<IncludeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEW_LINE() { return GetToken(IDLPreprocessorParser.NEW_LINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(IDLPreprocessorParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DirectiveContext directive() {
			return GetRuleContext<DirectiveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PragmaContext pragma() {
			return GetRuleContext<PragmaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CodeContext code() {
			return GetRuleContext<CodeContext>(0);
		}
		public TextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_text; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.EnterText(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.ExitText(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIDLPreprocessorParserVisitor<TResult> typedVisitor = visitor as IIDLPreprocessorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextContext text() {
		TextContext _localctx = new TextContext(Context, State);
		EnterRule(_localctx, 2, RULE_text);
		int _la;
		try {
			State = 37;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 24;
				Match(SHARP);
				State = 25;
				include();
				State = 26;
				_la = TokenStream.LA(1);
				if ( !(_la==Eof || _la==NEW_LINE) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 28;
				Match(SHARP);
				State = 29;
				directive();
				State = 30;
				_la = TokenStream.LA(1);
				if ( !(_la==Eof || _la==NEW_LINE) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 32;
				Match(SHARP);
				State = 33;
				pragma();
				State = 34;
				_la = TokenStream.LA(1);
				if ( !(_la==Eof || _la==NEW_LINE) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 36;
				code();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CodeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] CODE() { return GetTokens(IDLPreprocessorParser.CODE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CODE(int i) {
			return GetToken(IDLPreprocessorParser.CODE, i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_code; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.EnterCode(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.ExitCode(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIDLPreprocessorParserVisitor<TResult> typedVisitor = visitor as IIDLPreprocessorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodeContext code() {
		CodeContext _localctx = new CodeContext(Context, State);
		EnterRule(_localctx, 4, RULE_code);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 39;
					Match(CODE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 42;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncludeContext : ParserRuleContext {
		public IncludeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_include; } }
	 
		public IncludeContext() { }
		public virtual void CopyFrom(IncludeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PreprocessorIncludeContext : IncludeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INCLUDE() { return GetToken(IDLPreprocessorParser.INCLUDE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Directive_textContext directive_text() {
			return GetRuleContext<Directive_textContext>(0);
		}
		public PreprocessorIncludeContext(IncludeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.EnterPreprocessorInclude(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.ExitPreprocessorInclude(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIDLPreprocessorParserVisitor<TResult> typedVisitor = visitor as IIDLPreprocessorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorInclude(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncludeContext include() {
		IncludeContext _localctx = new IncludeContext(Context, State);
		EnterRule(_localctx, 6, RULE_include);
		try {
			_localctx = new PreprocessorIncludeContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			Match(INCLUDE);
			State = 45;
			directive_text();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PragmaContext : ParserRuleContext {
		public PragmaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pragma; } }
	 
		public PragmaContext() { }
		public virtual void CopyFrom(PragmaContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PreprocessorPragmaPrefixContext : PragmaContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRAGMA() { return GetToken(IDLPreprocessorParser.PRAGMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PREFIX() { return GetToken(IDLPreprocessorParser.PREFIX, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Directive_textContext directive_text() {
			return GetRuleContext<Directive_textContext>(0);
		}
		public PreprocessorPragmaPrefixContext(PragmaContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.EnterPreprocessorPragmaPrefix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.ExitPreprocessorPragmaPrefix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIDLPreprocessorParserVisitor<TResult> typedVisitor = visitor as IIDLPreprocessorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorPragmaPrefix(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorPragmaContext : PragmaContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRAGMA() { return GetToken(IDLPreprocessorParser.PRAGMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Directive_textContext directive_text() {
			return GetRuleContext<Directive_textContext>(0);
		}
		public PreprocessorPragmaContext(PragmaContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.EnterPreprocessorPragma(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.ExitPreprocessorPragma(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIDLPreprocessorParserVisitor<TResult> typedVisitor = visitor as IIDLPreprocessorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorPragma(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PragmaContext pragma() {
		PragmaContext _localctx = new PragmaContext(Context, State);
		EnterRule(_localctx, 8, RULE_pragma);
		try {
			State = 52;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				_localctx = new PreprocessorPragmaPrefixContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 47;
				Match(PRAGMA);
				State = 48;
				Match(PREFIX);
				State = 49;
				directive_text();
				}
				break;
			case 2:
				_localctx = new PreprocessorPragmaContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 50;
				Match(PRAGMA);
				State = 51;
				directive_text();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveContext : ParserRuleContext {
		public DirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directive; } }
	 
		public DirectiveContext() { }
		public virtual void CopyFrom(DirectiveContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PreprocessorDefContext : DirectiveContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IFDEF() { return GetToken(IDLPreprocessorParser.IFDEF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONDITIONAL_SYMBOL() { return GetToken(IDLPreprocessorParser.CONDITIONAL_SYMBOL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IFNDEF() { return GetToken(IDLPreprocessorParser.IFNDEF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UNDEF() { return GetToken(IDLPreprocessorParser.UNDEF, 0); }
		public PreprocessorDefContext(DirectiveContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.EnterPreprocessorDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.ExitPreprocessorDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIDLPreprocessorParserVisitor<TResult> typedVisitor = visitor as IIDLPreprocessorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorDef(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorErrorContext : DirectiveContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ERROR() { return GetToken(IDLPreprocessorParser.ERROR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Directive_textContext directive_text() {
			return GetRuleContext<Directive_textContext>(0);
		}
		public PreprocessorErrorContext(DirectiveContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.EnterPreprocessorError(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.ExitPreprocessorError(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIDLPreprocessorParserVisitor<TResult> typedVisitor = visitor as IIDLPreprocessorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorError(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorConditionalContext : DirectiveContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(IDLPreprocessorParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Preprocessor_expressionContext preprocessor_expression() {
			return GetRuleContext<Preprocessor_expressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELIF() { return GetToken(IDLPreprocessorParser.ELIF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELSE() { return GetToken(IDLPreprocessorParser.ELSE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDIF() { return GetToken(IDLPreprocessorParser.ENDIF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Directive_textContext directive_text() {
			return GetRuleContext<Directive_textContext>(0);
		}
		public PreprocessorConditionalContext(DirectiveContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.EnterPreprocessorConditional(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.ExitPreprocessorConditional(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIDLPreprocessorParserVisitor<TResult> typedVisitor = visitor as IIDLPreprocessorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorConditional(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorDefineContext : DirectiveContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINE() { return GetToken(IDLPreprocessorParser.DEFINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONDITIONAL_SYMBOL() { return GetToken(IDLPreprocessorParser.CONDITIONAL_SYMBOL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Directive_textContext directive_text() {
			return GetRuleContext<Directive_textContext>(0);
		}
		public PreprocessorDefineContext(DirectiveContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.EnterPreprocessorDefine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIDLPreprocessorParserListener typedListener = listener as IIDLPreprocessorParserListener;
			if (typedListener != null) typedListener.ExitPreprocessorDefine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIDLPreprocessorParserVisitor<TResult> typedVisitor = visitor as IIDLPreprocessorParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorDefine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveContext directive() {
		DirectiveContext _localctx = new DirectiveContext(Context, State);
		EnterRule(_localctx, 10, RULE_directive);
		int _la;
		try {
			State = 76;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IF:
				_localctx = new PreprocessorConditionalContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 54;
				Match(IF);
				State = 55;
				preprocessor_expression(0);
				}
				break;
			case ELIF:
				_localctx = new PreprocessorConditionalContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 56;
				Match(ELIF);
				State = 57;
				preprocessor_expression(0);
				}
				break;
			case ELSE:
				_localctx = new PreprocessorConditionalContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 58;
				Match(ELSE);
				}
				break;
			case ENDIF:
				_localctx = new PreprocessorConditionalContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 59;
				Match(ENDIF);
				State = 61;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==TEXT) {
					{
					State = 60;
					directive_text();
					}
				}

				}
				break;
			case IFDEF:
				_localctx = new PreprocessorDefContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 63;
				Match(IFDEF);
				State = 64;
				Match(CONDITIONAL_SYMBOL);
				}
				break;
			case IFNDEF:
				_localctx = new PreprocessorDefContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 65;
				Match(IFNDEF);
				State = 66;
				Match(CONDITIONAL_SYMBOL);
				}
				break;
			case UNDEF:
				_localctx = new PreprocessorDefContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 67;
				Match(UNDEF);
				State = 68;
				Match(CONDITIONAL_SYMBOL);
				}
				break;
			case ERROR:
				_localctx = new PreprocessorErrorContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 69;
				Match(ERROR);
				State = 70;
				directive_text();
				}
				break;
			case DEFINE:
				_localctx = new PreprocessorDefineContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 71;
				Match(DEFINE);
				State = 72;
				Match(CONDITIONAL_SYMBOL);
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==TEXT) {
					{
					State = 73;
					directive_text();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
